# independent_study

GTSAM/gtborg-gtsam-6b6a8495bb91/examples/: OdometryExample.cpp
trajectory_gps_imu/: gps.txt  imu.txt
trajectory_gps_imu/src/trajectory_gps_imu/: CMakeLists.txt  main.cpp  package.xml
trajectory_gps_imu/src/trajectory_gps_imu/include/: lib.h
trajectory_gps_imu/src/trajectory_gps_imu/lib/: lib.cpp
